feat(review & product): refactor DTOs/entities, link reviews to product, set DB to update